# multiplot

./: Cargo.toml  README.md
src/: criterion.rs  main.rs  plot.rs  trace.rs
