[package]
name = "multiplot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
colorous = "1.0.13"
criterion = { version = "0.5.1", default-features = false }
plotters = { version = "0.3.5", default-features = false, features = ["bitmap_encoder", "svg_backend", "ttf", "line_series", "errorbar"] }
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
walkdir = "2.5.0"
